# yet-another-game-launcher

./: .eslintrc.json  .gitignore  .releaserc.json  2  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  TEST-SETUP-README.md  TODO.md  components.json  database.sqlite-journal  deny.toml  design-tokens.json  electron-builder.config.js  electron-builder.yml  electron.vite.config.js  electron.vite.config.mjs  forge.config.ts  lint-staged.config.js  loading.html  package-lock.json  package.json  pnpm-lock.yaml  release.config.js  rust-analyzer.toml  steam.ts  tailwind.config.js  tailwind.tokens.js  thirdPartyNotice.json  todo.md  tsconfig.json  vitest.config.ts  webpack.common.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
.github/: .copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  licenses.yml  release.yml  security.yml
.husky/: pre-commit
locale/en/: GameStatus.json  common.json  notification.json
prisma/: schema.prisma
scripts/: generate-tokens.ts  install-appimage.sh  updateGameName.ts  version-bump.mjs
src/: bindings.ts
src-tauri/: Cargo.toml
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-005b698b62fd73d3b0b44aefa386cad1b43d942e28fecac0fd0f6440f73f487d.json  query-0897845483757374283c33d2d42c4540310c3e0c52c9c627c552afd7066ab37f.json  query-16183598ef082e607fcd8cd57b903956681ef237cdbe4fb7bed5946d4998a75f.json  query-1e8b701aef674c7037f086d4decbecffb3224de65087d4820379c17d0b1cdf41.json  query-224f1ee4adea74d66d4291c4d178455eb684203dceee3d1912af559bddbd86a6.json  query-26ff7c1a28c83d6d3d9e9d41234bb91fd9dd26a2b4f28b69cbada35c0e6e42f8.json  query-2e533ef737df4d654245af934421380298a5c5dcd9554853e28366bb1a22bf82.json  query-2e6ff76538c82b93c87361813af992ee892fb5b958b52f487946ebf305a618c0.json  query-31916a8520e263a7e09985af44481a345baf0ddb4acbaa880e01623cfc46a6f5.json  query-353004da67d4fcb2413b234738911c9614fe714a2ce2cb6e874e5ca748822731.json  query-36dd08e8f43d31ca4c17107ccaca91a667c034ec3e8f4a4d8138acf71bae0da4.json  query-37e79e700f6d43868dee43c68107cd26be5a59f87970e6af73e1b3334d9e545b.json  query-4bfebad4c99e2b3a878e9faa56a86f94acdcb34ea6f97005e39841f249c80fe6.json  query-4ef0cd79dde35f8dc69f835cce7c9286f6f85a00498c2ad88cbcecf5e50db92d.json  query-50b830c7e0ba1df88472622d7af450fb9c2d10d72501fb2ed821017caba9af90.json  query-551fe7b9b8ba7e59099449d3bcd690ef3804976cb6ae23d8da2812fed266b641.json  query-6371bebb9b861585822e451f0ea33984d95e2f6d6b47941492a704d301f69f38.json  query-6545ab9f9fdb5f6cb64d33a051835ab31ab78d541bc93c4ff123d11c78e1beb8.json  query-65da6c002c71d97b3e3879dc2aa7d6bb5dde5444a52ab550b3382b81ad35de8c.json  (+22 more)
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/src/: bindings.ts  lib.rs  main.rs
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: cli.rs  config.rs  interactive.rs  lib.rs  main.rs  progress.rs  utils.rs
src-tauri/cli/src/commands/: install.rs  launch.rs  mod.rs  search.rs  status.rs  sync.rs  uninstall.rs  view.rs
src-tauri/cli/src/commands/sync/: mod.rs  progress.rs
src-tauri/cli/src/commands/sync/progress/: tests.rs
src-tauri/cli/tests/: config.rs  install_command.rs  launch_command.rs  readme_usage.rs  search_command.rs  status_command.rs  sync_command.rs  uninstall_command.rs  view_command.rs
src-tauri/cli/tests/common/: mod.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: config.rs  db.rs  default_config.toml  error.rs  events.rs  lib.rs  utils.rs
src-tauri/core/src/domains/: mod.rs
src-tauri/core/src/domains/achievement/: commands.rs  repository.rs  service.rs
src-tauri/core/src/domains/achievement/models/: payloads.rs  read.rs  write.rs
src-tauri/core/src/domains/game/: commands.rs  repository.rs  service.rs
src-tauri/core/src/domains/game/models/: mod.rs  payloads.rs  read.rs  write.rs
src-tauri/core/src/domains/media/: commands.rs  repository.rs  service.rs
src-tauri/core/src/domains/media/models/: payloads.rs  read.rs  write.rs
src-tauri/core/src/domains/storefront/: commands.rs  mod.rs  models.rs  providers.rs  service.rs
src-tauri/core/src/domains/storefront/steam/: api.rs  local.rs  mod.rs  models.rs  provider.rs  service.rs
src-tauri/core/src/migrations/: 20240101000000_initial.sql  20240102000000_redesign_schema.sql  20240103000000_add_game_status_table.sql  20240104000000_add_missing_tables.sql  20240105000000_add_game_launch.sql  20240106000000_add_igdb_id_to_game.sql  20240107000000_media.sql  20240108000000_add_normalized_name_to_game.sql  20240109000000_add_game_launch_env_proton.sql  20240110000000_add_achievement_sets.sql  20240111000000_scope_achievement_sets_to_game_launch.sql  20240112000000_add_achievement_source_status.sql  20240113000000_normalize_achievement_sources.sql
src-tauri/core/src/services/: media_fetcher.rs  mod.rs
src-tauri/core/src/testing/: db.rs  fixtures.rs
src-tauri/core/tests/: achievement_service.rs  game_repository.rs  game_service.rs  media_repository.rs  media_service.rs  steam.rs  storefront_service.rs
src/common/: axiosConfig.ts  constant.ts  error.ts  (+4 more)
test/: basic.test.ts  global-setup.ts  setup-transaction.ts  setup.ts
(+685 files in other folders)
