[package]
name = "app"
version = "1.5.1"
description = "Yet Another Game Launcher"
edition = "2021"
license = "MIT"
default-run = "app"

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "export-bindings"
path = "src/bin/export-bindings.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
yagl-core = { path = "../core" }
cli_lib = { path = "../cli", package = "cli" }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
