[package]
name = "cli"
version = "1.5.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "yagl"
path = "src/main.rs"

[lib]
name = "cli_lib"
path = "src/lib.rs"

[dependencies]
yagl-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
indicatif = "0.18"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
yagl-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serial_test = "3"
